Practica 6/parser.out
Grammar:

Rule 0     S' -> total
Rule 1     total -> statement PTOCOMA
Rule 2     statement -> expr
Rule 3     statement -> ID ASSIGN statement
Rule 4     expr -> term
Rule 5     expr -> expr MINUS term
Rule 6     expr -> expr PLUS term
Rule 7     term -> factor
Rule 8     term -> term DIVIDE factor
Rule 9     term -> term TIMES factor
Rule 10    factor -> LPAREN statement RPAREN
Rule 11    factor -> ID
Rule 12    factor -> MINUS factor
Rule 13    factor -> NUMBER

Terminals, with rules where they appear:

ASSIGN               : 3
DIVIDE               : 8
ID                   : 3 11
LPAREN               : 10
MINUS                : 5 12
NUMBER               : 13
PLUS                 : 6
PTOCOMA              : 1
RPAREN               : 10
TIMES                : 9
error                : 

Nonterminals, with rules where they appear:

expr                 : 2 5 6
factor               : 7 8 9 12
statement            : 1 3 10
term                 : 4 5 6 8 9
total                : 0


state 0

    (0) S' -> . total
    (1) total -> . statement PTOCOMA
    (2) statement -> . expr
    (3) statement -> . ID ASSIGN statement
    (4) expr -> . term
    (5) expr -> . expr MINUS term
    (6) expr -> . expr PLUS term
    (7) term -> . factor
    (8) term -> . term DIVIDE factor
    (9) term -> . term TIMES factor
    (10) factor -> . LPAREN statement RPAREN
    (11) factor -> . ID
    (12) factor -> . MINUS factor
    (13) factor -> . NUMBER
    ID              shift and go to state 4
    LPAREN          shift and go to state 8
    MINUS           shift and go to state 6
    NUMBER          shift and go to state 9

    total                          shift and go to state 1
    statement                      shift and go to state 2
    expr                           shift and go to state 3
    term                           shift and go to state 5
    factor                         shift and go to state 7

state 1

    (0) S' -> total .


state 2

    (1) total -> statement . PTOCOMA
    PTOCOMA         shift and go to state 10


state 3

    (2) statement -> expr .
    (5) expr -> expr . MINUS term
    (6) expr -> expr . PLUS term
    PTOCOMA         reduce using rule 2 (statement -> expr .)
    RPAREN          reduce using rule 2 (statement -> expr .)
    MINUS           shift and go to state 11
    PLUS            shift and go to state 12


state 4

    (3) statement -> ID . ASSIGN statement
    (11) factor -> ID .
    ASSIGN          shift and go to state 13
    DIVIDE          reduce using rule 11 (factor -> ID .)
    TIMES           reduce using rule 11 (factor -> ID .)
    MINUS           reduce using rule 11 (factor -> ID .)
    PLUS            reduce using rule 11 (factor -> ID .)
    PTOCOMA         reduce using rule 11 (factor -> ID .)
    RPAREN          reduce using rule 11 (factor -> ID .)


state 5

    (4) expr -> term .
    (8) term -> term . DIVIDE factor
    (9) term -> term . TIMES factor
    MINUS           reduce using rule 4 (expr -> term .)
    PLUS            reduce using rule 4 (expr -> term .)
    PTOCOMA         reduce using rule 4 (expr -> term .)
    RPAREN          reduce using rule 4 (expr -> term .)
    DIVIDE          shift and go to state 14
    TIMES           shift and go to state 15


state 6

    (12) factor -> MINUS . factor
    (10) factor -> . LPAREN statement RPAREN
    (11) factor -> . ID
    (12) factor -> . MINUS factor
    (13) factor -> . NUMBER
    LPAREN          shift and go to state 8
    ID              shift and go to state 17
    MINUS           shift and go to state 6
    NUMBER          shift and go to state 9

    factor                         shift and go to state 16

state 7

    (7) term -> factor .
    DIVIDE          reduce using rule 7 (term -> factor .)
    TIMES           reduce using rule 7 (term -> factor .)
    MINUS           reduce using rule 7 (term -> factor .)
    PLUS            reduce using rule 7 (term -> factor .)
    PTOCOMA         reduce using rule 7 (term -> factor .)
    RPAREN          reduce using rule 7 (term -> factor .)


state 8

    (10) factor -> LPAREN . statement RPAREN
    (2) statement -> . expr
    (3) statement -> . ID ASSIGN statement
    (4) expr -> . term
    (5) expr -> . expr MINUS term
    (6) expr -> . expr PLUS term
    (7) term -> . factor
    (8) term -> . term DIVIDE factor
    (9) term -> . term TIMES factor
    (10) factor -> . LPAREN statement RPAREN
    (11) factor -> . ID
    (12) factor -> . MINUS factor
    (13) factor -> . NUMBER
    ID              shift and go to state 4
    LPAREN          shift and go to state 8
    MINUS           shift and go to state 6
    NUMBER          shift and go to state 9

    statement                      shift and go to state 18
    expr                           shift and go to state 3
    term                           shift and go to state 5
    factor                         shift and go to state 7

state 9

    (13) factor -> NUMBER .
    DIVIDE          reduce using rule 13 (factor -> NUMBER .)
    TIMES           reduce using rule 13 (factor -> NUMBER .)
    MINUS           reduce using rule 13 (factor -> NUMBER .)
    PLUS            reduce using rule 13 (factor -> NUMBER .)
    PTOCOMA         reduce using rule 13 (factor -> NUMBER .)
    RPAREN          reduce using rule 13 (factor -> NUMBER .)


state 10

    (1) total -> statement PTOCOMA .
    $end            reduce using rule 1 (total -> statement PTOCOMA .)


state 11

    (5) expr -> expr MINUS . term
    (7) term -> . factor
    (8) term -> . term DIVIDE factor
    (9) term -> . term TIMES factor
    (10) factor -> . LPAREN statement RPAREN
    (11) factor -> . ID
    (12) factor -> . MINUS factor
    (13) factor -> . NUMBER
    LPAREN          shift and go to state 8
    ID              shift and go to state 17
    MINUS           shift and go to state 6
    NUMBER          shift and go to state 9

    term                           shift and go to state 19
    factor                         shift and go to state 7

state 12

    (6) expr -> expr PLUS . term
    (7) term -> . factor
    (8) term -> . term DIVIDE factor
    (9) term -> . term TIMES factor
    (10) factor -> . LPAREN statement RPAREN
    (11) factor -> . ID
    (12) factor -> . MINUS factor
    (13) factor -> . NUMBER
    LPAREN          shift and go to state 8
    ID              shift and go to state 17
    MINUS           shift and go to state 6
    NUMBER          shift and go to state 9

    term                           shift and go to state 20
    factor                         shift and go to state 7

state 13

    (3) statement -> ID ASSIGN . statement
    (2) statement -> . expr
    (3) statement -> . ID ASSIGN statement
    (4) expr -> . term
    (5) expr -> . expr MINUS term
    (6) expr -> . expr PLUS term
    (7) term -> . factor
    (8) term -> . term DIVIDE factor
    (9) term -> . term TIMES factor
    (10) factor -> . LPAREN statement RPAREN
    (11) factor -> . ID
    (12) factor -> . MINUS factor
    (13) factor -> . NUMBER
    ID              shift and go to state 4
    LPAREN          shift and go to state 8
    MINUS           shift and go to state 6
    NUMBER          shift and go to state 9

    statement                      shift and go to state 21
    expr                           shift and go to state 3
    term                           shift and go to state 5
    factor                         shift and go to state 7

state 14

    (8) term -> term DIVIDE . factor
    (10) factor -> . LPAREN statement RPAREN
    (11) factor -> . ID
    (12) factor -> . MINUS factor
    (13) factor -> . NUMBER
    LPAREN          shift and go to state 8
    ID              shift and go to state 17
    MINUS           shift and go to state 6
    NUMBER          shift and go to state 9

    factor                         shift and go to state 22

state 15

    (9) term -> term TIMES . factor
    (10) factor -> . LPAREN statement RPAREN
    (11) factor -> . ID
    (12) factor -> . MINUS factor
    (13) factor -> . NUMBER
    LPAREN          shift and go to state 8
    ID              shift and go to state 17
    MINUS           shift and go to state 6
    NUMBER          shift and go to state 9

    factor                         shift and go to state 23

state 16

    (12) factor -> MINUS factor .
    DIVIDE          reduce using rule 12 (factor -> MINUS factor .)
    TIMES           reduce using rule 12 (factor -> MINUS factor .)
    MINUS           reduce using rule 12 (factor -> MINUS factor .)
    PLUS            reduce using rule 12 (factor -> MINUS factor .)
    PTOCOMA         reduce using rule 12 (factor -> MINUS factor .)
    RPAREN          reduce using rule 12 (factor -> MINUS factor .)


state 17

    (11) factor -> ID .
    DIVIDE          reduce using rule 11 (factor -> ID .)
    TIMES           reduce using rule 11 (factor -> ID .)
    MINUS           reduce using rule 11 (factor -> ID .)
    PLUS            reduce using rule 11 (factor -> ID .)
    PTOCOMA         reduce using rule 11 (factor -> ID .)
    RPAREN          reduce using rule 11 (factor -> ID .)


state 18

    (10) factor -> LPAREN statement . RPAREN
    RPAREN          shift and go to state 24


state 19

    (5) expr -> expr MINUS term .
    (8) term -> term . DIVIDE factor
    (9) term -> term . TIMES factor
    MINUS           reduce using rule 5 (expr -> expr MINUS term .)
    PLUS            reduce using rule 5 (expr -> expr MINUS term .)
    PTOCOMA         reduce using rule 5 (expr -> expr MINUS term .)
    RPAREN          reduce using rule 5 (expr -> expr MINUS term .)
    DIVIDE          shift and go to state 14
    TIMES           shift and go to state 15


state 20

    (6) expr -> expr PLUS term .
    (8) term -> term . DIVIDE factor
    (9) term -> term . TIMES factor
    MINUS           reduce using rule 6 (expr -> expr PLUS term .)
    PLUS            reduce using rule 6 (expr -> expr PLUS term .)
    PTOCOMA         reduce using rule 6 (expr -> expr PLUS term .)
    RPAREN          reduce using rule 6 (expr -> expr PLUS term .)
    DIVIDE          shift and go to state 14
    TIMES           shift and go to state 15


state 21

    (3) statement -> ID ASSIGN statement .
    PTOCOMA         reduce using rule 3 (statement -> ID ASSIGN statement .)
    RPAREN          reduce using rule 3 (statement -> ID ASSIGN statement .)


state 22

    (8) term -> term DIVIDE factor .
    DIVIDE          reduce using rule 8 (term -> term DIVIDE factor .)
    TIMES           reduce using rule 8 (term -> term DIVIDE factor .)
    MINUS           reduce using rule 8 (term -> term DIVIDE factor .)
    PLUS            reduce using rule 8 (term -> term DIVIDE factor .)
    PTOCOMA         reduce using rule 8 (term -> term DIVIDE factor .)
    RPAREN          reduce using rule 8 (term -> term DIVIDE factor .)


state 23

    (9) term -> term TIMES factor .
    DIVIDE          reduce using rule 9 (term -> term TIMES factor .)
    TIMES           reduce using rule 9 (term -> term TIMES factor .)
    MINUS           reduce using rule 9 (term -> term TIMES factor .)
    PLUS            reduce using rule 9 (term -> term TIMES factor .)
    PTOCOMA         reduce using rule 9 (term -> term TIMES factor .)
    RPAREN          reduce using rule 9 (term -> term TIMES factor .)


state 24

    (10) factor -> LPAREN statement RPAREN .
    DIVIDE          reduce using rule 10 (factor -> LPAREN statement RPAREN .)
    TIMES           reduce using rule 10 (factor -> LPAREN statement RPAREN .)
    MINUS           reduce using rule 10 (factor -> LPAREN statement RPAREN .)
    PLUS            reduce using rule 10 (factor -> LPAREN statement RPAREN .)
    PTOCOMA         reduce using rule 10 (factor -> LPAREN statement RPAREN .)
    RPAREN          reduce using rule 10 (factor -> LPAREN statement RPAREN .)
